# py-cad

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  EXPORT_IMPLEMENTATION_PLAN.md  OLD_README.md  README.md  enum_testing.py  export_project.py  man_testing.py  pyproject.toml  show_objects.py  temp_test.py  testing.py
helpers/: abstracts.py  assembler.py  enum_helpers.py  models.py
helpers/abc/: __init__.py  assembler_abc.py
primitives/basic_box/: __init__.py  assembly.py  factory.py  parts.py  project_data.py
primitives/plywood_box/: assembly.py  parts.py  project_data.py
projects/: generic_box.py  generic_plywood_box.py
projects/garbage_sort_box/: assembly.py  measurements.py  parts.py  project_data.py
sketches/garbage_sort_box/: assembly.py  parts.py
sketches/woodworking/garbage_sort_box/: assembly.py  garbage_sort_box_assembly.step  measurements.py  parts.py  show_objects.py  testing.ipynb
sketches/woodworking/garbage_sort_box/.virtual_documents/: Untitled.ipynb
sketches/woodworking/test_project/: assembly.py  test_box.py  test_part.py
src/py_cad/: __init__.py  core.py  enum_helpers.py  helpers.py
src/py_cad/export/: __init__.py  _step.py  _svg.py
src/py_cad/primitives/basic_box/: __init__.py  assembly.py  parts.py  project_data.py
src/py_cad/primitives/plywood_box/: __init__.py  assembly.py  parts.py  project_data.py
tests/: test_assembler.py  test_builder.py  test_dimension_data.py  test_enum_helpers.py  test_export.py  test_normalized_dict.py  test_strautoenum.py
tests/test_project/: assembly.py  parts.py  project_data.py
