[project]
name = "athor-sketches"
version = "0.0.1"
description = "Contains the sketches used by my home and woodworking projects"
requires-python = ">=3.10, <3.13"
readme = "README.md"

authors = [
  { name = "Andreas Thorén", email = "andreasthoren79@gmail.com" }
]

dependencies = [
  "cadquery",
  # "CQ-editor",  # Kan installeras separat om du vill använda CQ-editor
]

[project.optional-dependencies]
dev = ["black"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
