[project]
name = "athor-sketches"
version = "0.0.1"
description = "Contains the sketches used by my home and woodworking projects"
requires-python = ">=3.10, <3.13"
readme = "README.md"

authors = [
  { name = "Andreas Thorén", email = "andreasthoren79@gmail.com" }
]

dependencies = [
  "cadquery>=2.4",
]

[project.optional-dependencies]
editor = ["cq-editor>=0.7"]

[dependency-groups]
dev = ["black"]

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
